# glyph-party

./: .gitignore  AGENTS.md  README.md  build-unicode-data.js  descriptions.json  generate_descriptions.py  justfile  package-lock.json  package.json  pyproject.toml
.github/workflows/: preview.yml  production.yml
src/: index.html  script.js  style.css
